--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ TOPIC_EXPLOS=explos
 TOPIC_ROW_DATA=row_data
 
 
+
 #consumers
 
 #config
@@ -14,5 +15,7 @@ NUM_PARTITIONS=3
 REPLICATION_FACTOR=3
 #DB
 ##psql
-
+ENGINE=postgresql://postgres:1234@172.29.168.75/email_enemy
 ##mongodb
+DB_URL=mongodb://172.29.168.75:27017
+DB=email_enemy
